language/move-lang/tests/move_check/typing/mutate_immutable.exp
error: 

   ┌── tests/move_check/typing/mutate_immutable.move:5:10 ───
   │
 5 │         *(s: &S) = S { f: 0 };
   │          ------- Is not a subtype of: '&mut _'
   │          ^^^^^^^ Invalid mutation. Expected a mutable reference
   │              -- The type: '&0x8675309::M::S'
   │

error: 

   ┌── tests/move_check/typing/mutate_immutable.move:6:10 ───
   │
 6 │         *&0 = 1;
   │          -- The type: '&{integer}'
   │          -- Is not a subtype of: '&mut _'
   │          ^^ Invalid mutation. Expected a mutable reference
   │

error: 

    ┌── tests/move_check/typing/mutate_immutable.move:9:20 ───
    │
  9 │         let x_ref: &u64 = x_ref;
    │                    ---- The type: '&u64'
 10 │         *x_ref = 0;
    │          ----- Is not a subtype of: '&mut _'
    │          ^^^^^ Invalid mutation. Expected a mutable reference
    │

